# stm32cubemx_vscode_sample_monkeypi_stm32g070

./: readme.md
MAX98357/: .mxproject  CMakeLists.txt  MAX98357.ioc
MAX98357/Core/Inc/: i2s.h  stm32g0xx_hal_conf.h
MAX98357/Core/Src/: i2s.c  main.c
MAX98357/cmake/stm32cubemx/: CMakeLists.txt
MAX98357/script/: gen_test_data.py  voice8k16b.h
adc/: .mxproject  CMakeLists.txt  adc.ioc
adc/Core/Src/: adc.c  main.c
adc/cmake/stm32cubemx/: CMakeLists.txt
button/: .mxproject  CMakeLists.txt  button.ioc
button/Core/Inc/: main.h  stm32g0xx_it.h
button/Core/Src/: gpio.c  main.c  stm32g0xx_it.c
button/libs/log/: log2rtt.c  log2rtt.h  log_config.h
encoder/: CMakeLists.txt  encoder.ioc
encoder/Core/Inc/: stm32g0xx_it.h
encoder/Core/Src/: gpio.c  main.c  stm32g0xx_it.c  tim.c
led/: led.ioc
log/: .mxproject  CMakeLists.txt  log.ioc
log/Core/Src/: main.c
log/libs/log/: log.c  log.h  log2file.c  log2serial.c  log2serial.h  (+1 more)
motor/: CMakeLists.txt  motor.ioc
oled/: .mxproject  CMakeLists.txt  oled.ioc
sgl_gui/: CMakeLists.txt  sgl_gui.ioc
sgl_gui/libs/sgl/: CMakeLists.txt
sgl_gui/libs/sgl/source/: sgl_config.h
sgl_gui/libs/sgl/source/fonts/: sgl_ascii_consolas18.c  sgl_ascii_consolas40.c  sgl_ascii_consolas56.c
sgl_gui/libs/sgl/source/include/: sgl_font.h  sgl_log.h
sht30/: CMakeLists.txt  sht30.ioc
tft_gc9a01/: CMakeLists.txt  tft_gc9a01.ioc
tft_st7789/: CMakeLists.txt  tft_st7789.ioc
uart-v1/: CMakeLists.txt  uart-v1.ioc
uart-v2/: CMakeLists.txt  uart-v2.ioc
w25q64_flash/: .mxproject  CMakeLists.txt  w25q64_flash.ioc
(+63 files in other folders)
